--- a/index.html
+++ b/index.html
@@ -42,10 +42,42 @@
 				</ul>
 			</nav>
 
-			<div class="main-event small-12 medium-12 large-12 columns">
-				
+			<div class="main-event white-color small-12 medium-12 large-12 columns">
+				<p class="title">Campeonato Gaúcho de Poker</p>
+				<span class="infos data fa-calendar">10 a 15 de Dezembro de 2014</span>
+				<span class="infos place fa-map-marker">Local: Centro de eventos Porto Alegre</span>
+				<span class="infos buyin fa-usd">Buy-in: R$ 1.000,00</span>
+
+				<p class="some-information"><span class="big-text">500k</span><span class="small-text">garantidos</span></p>
+				<a href="#" class="btn squared-button fa-play-circle follow-event">acompanhar</a>
 			</div>
 
+		</div>
+	</section>
+
+	<section class="advertisement">
+		<div class="row small-12 medium-12 large-12">
+			<img src="http://placehold.it/960x100&text=Publicidade" />
+		</div>
+	</section>
+
+	<section class="other-events">
+		<div class="row">
+			<ul class="event-list">
+				<li class="red">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-play-circle">acompanhar</a>
+				</li>
+				<li class="blue">
+					<a href="#" class="follow-event fa-play-circle">acompanhar</a>
+				</li>
+				<li class="gray">
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
+			</ul>
 		</div>
 	</section>
 
