--- a/index.html
+++ b/index.html
@@ -63,21 +63,88 @@
 
 	<section class="other-events">
 		<div class="row">
-			<ul class="event-list">
+			<ul class="event-list clearfix">
 				<li class="red">
 					<p class="title">Satélite Freeroll</p>
 					<span class="infos data">10 a 15 de Dezembro de 2014</span>
-					<span class="infos local">Local: Centro de Porto Alegre</span>
-					<span class="infos buyin">Buy-in: R$1.000,00</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
 					<a href="#" class="follow-event fa-play-circle">acompanhar</a>
 				</li>
 				<li class="blue">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
 					<a href="#" class="follow-event fa-play-circle">acompanhar</a>
 				</li>
+				<li class="advertisement">
+					<img src="http://placehold.it/305x192&text=Publicidade" />
+				</li>
+				
+				<li class="red">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
+				<li class="blue">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
 				<li class="gray">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
+				
+				<li class="red">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
+				<li class="blue">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
+					<a href="#" class="follow-event fa-envelope warn">avisar</a>
+				</li>
+				<li class="gray">
+					<p class="title">Satélite Freeroll</p>
+					<span class="infos data">10 a 15 de Dezembro de 2014</span>
+					<span class="infos local fa-map-marker">Local: Centro de Porto Alegre</span>
+					<span class="infos buyin fa-usd">Buy-in: R$1.000,00</span>
 					<a href="#" class="follow-event fa-envelope warn">avisar</a>
 				</li>
 			</ul>
+			<a href="#" class="see-more no-radius no-border fa-plus-square">ver mais</a>
+		</div>
+	</section>
+
+	<section class="footer">
+		<div class="row">
+			<div class="small-12 medium-5 large-5 columns">
+				aaa
+			</div>
+			<div class="small-12 medium-7 large-7 columns">
+				<p class="title">QUEM SOMOS?</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint laboriosam blanditiis iusto rem, eligendi necessitatibus dolores, officiis illum quam atque qui officia commodi sed, accusantium. Obcaecati consequatur, itaque repellat omnis!
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint laboriosam blanditiis iusto rem, eligendi necessitatibus dolores, officiis illum quam atque qui officia commodi sed, accusantium. Obcaecati consequatur, itaque repellat omnis!
+				</p>
+			</div>
+			<div class="small-12 medium-12 large-12 columns">
+				<p class="all-rights">Todos os direitos reservados a Hand4Hand</p>
+			</div>
 		</div>
 	</section>
 
