--- a/jogo.html
+++ b/jogo.html
@@ -69,13 +69,48 @@
 			        <div class="right-side">
 			            <ul class="cards right clearfix">
 			                <li class="red"><span class="letter">A</span><span class="nipe">♥</span></li>
-			                <li class="black"><span class="letter">A</span><span class="nipe">♥</span></li>
+			                <li class="black"><span class="letter">A</span><span class="nipe">♦</span></li>
 			            </ul>
-			            <div class="moves left">
-			                <span>Flop:</span>
-			                <span>Patrícia beta 5k fichas</span>
-			                <span>Gabriel: call</span>
-			            </div>
+			            <ul class="moves left">
+			                <li><span>Flop:</span></li>
+			                <li>
+			                	<span>Patrícia beta 5k fichas
+			                		<span class="stars">
+			                			<span class="font-awesome fa-star selected"></span>
+			                			<span class="font-awesome fa-star selected"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                		</span>
+			                	</span>
+			                </li>
+			                <li><span>Gabriel: call</span></li>
+			                <li><span class="pot">Pote 5k</span></li>
+			            </ul>
+			        </div>
+			    </li>
+			    <li>
+			        <div class="right-side">
+			            <ul class="cards right clearfix">
+			                <li class="red"><span class="letter">A</span><span class="nipe">♣</span></li>
+			                <li class="black"><span class="letter">A</span><span class="nipe">♠</span></li>
+			            </ul>
+			            <ul class="moves left">
+			                <li><span>Flop:</span></li>
+			                <li>
+			                	<span>Patrícia beta 5k fichas
+			                		<span class="stars">
+			                			<span class="font-awesome fa-star selected"></span>
+			                			<span class="font-awesome fa-star selected"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                			<span class="font-awesome fa-star"></span>
+			                		</span>
+			                	</span>
+			                </li>
+			                <li><span>Gabriel: call</span></li>
+			                <li><span class="pot">Pote 5k</span></li>
+			            </ul>
 			        </div>
 			    </li>
 			</ul>
