--- a/jogo.html
+++ b/jogo.html
@@ -49,17 +49,55 @@
 	<section class="content">
 		<div class="header-wrapper">
 			<div class="row">
+
 				<div class="game">
-					<ul class="players">
-						<li>
-							<img src="#">
+					<div class="players">
+						<a href="#" class="p1">
+							<img src="img/face.png">
 							<span class="name">Patrícia</span>
-						</li>
-						<li>
-							<img src="#">
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p2 inactive">
+							<img src="img/face.png">
 							<span class="name">Gabriel</span>
-						</li>
-					</ul>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p3">
+							<img src="img/face.png">
+							<span class="name">Patrícia</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p4 inactive">
+							<img src="img/face.png">
+							<span class="name">Gabriel</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p5 inactive">
+							<img src="img/face.png">
+							<span class="name">Patrícia</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p6 inactive">
+							<img src="img/face.png">
+							<span class="name">Gabriel</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p7 inactive">
+							<img src="img/face.png">
+							<span class="name">Patrícia</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p8 inactive">
+							<img src="img/face.png">
+							<span class="name">Gabriel</span>
+							<span class="l-c double"></span>
+						</a>
+						<a href="#" class="p9">
+							<img src="img/face.png">
+							<span class="name">Gabriel</span>
+							<span class="l-c double"></span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -68,8 +106,8 @@
 			    <li>
 			        <div class="right-side">
 			            <ul class="cards right clearfix">
-			                <li class="red"><span class="letter">A</span><span class="nipe">♥</span></li>
-			                <li class="black"><span class="letter">A</span><span class="nipe">♦</span></li>
+			                <li class="clubs cK"></li>
+			                <li class="diamonds cA"></li>
 			            </ul>
 			            <ul class="moves left">
 			                <li><span>Flop:</span></li>
@@ -92,8 +130,8 @@
 			    <li>
 			        <div class="right-side">
 			            <ul class="cards right clearfix">
-			                <li class="red"><span class="letter">A</span><span class="nipe">♣</span></li>
-			                <li class="black"><span class="letter">A</span><span class="nipe">♠</span></li>
+			                <li class="clubs cA"></li>
+			                <li class="diamonds cA"></li>
 			            </ul>
 			            <ul class="moves left">
 			                <li><span>Flop:</span></li>
